# rust-benchmark

./: .clippy.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  setup-hooks.sh  test.sh
.github/workflows/: bench.yml  ci.yml  perf.yml
benches/: collector_contention.rs  histogram_hot.rs  overhead.rs  stats.rs  timers.rs  watch_timer_hot.rs
docs/: API.md  BENCHMARK.md  GUIDELINES.md  METRICS.md  PRINCIPLES.md  README.md  dev-checklist.md
docs/features/: BENCHMARK.md  METRICS.md  README.md
examples/: async_task.rs  basic_cli.rs  multi_threaded_collection.rs  overhead_compare.rs  prometheus_textfile.rs  web_server.rs  zero_overhead.rs
perf_baselines/: histogram_hot.json  timers.json  watch_timer_hot.json
scripts/: compare_criterion_baseline.sh
src/: collector.rs  duration.rs  hist_backend.rs  hist_hdr.rs  histogram.rs  lib.rs  measurement.rs  timer.rs  trace.rs  watch.rs
tests/: collector_async.rs  hardening.rs  integration_tests.rs  long_stability.rs  macro_tests.rs  miri_ub.rs  platform_time.rs  prop_collector.rs  prop_duration.rs  prop_histogram.proptest-regressions  prop_histogram.rs  stress_hot_paths.rs  system_time_change.rs  trybuild_disabled.rs  watch_timer.rs  zero_duration_disabled.rs
tests/trybuild/: disabled_ok.rs
