[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
authors = ["James Gober <contact@jamesgober.com>"]
# description = ""
license = "Apache-2.0"
repository = "https://github.com/jamesgober/rust-benchmark"
# keywords = ["benchmark"]
# categories = []
readme = "README.md"
# documentation = "https://docs.rs/benchmark"



[dependencies]
